# DIS_TP

./: .gitignore  .pre-commit-config.yaml  APP.py  AQgx.tex  AQqPSx.tex  Betas.py  Harmonics.py  Initialize.py  Integration.py  MassiveCoeffFunc.py  MasslessCoeffFunc.py  MatchingFunc.py  Plotter.py  README.md  ReadTxt.py  Splitting_funcs.py  TildeCoeffFunc.py  Untitled.ipynb  dis_tp.toml  nohup.out  parameters.py  pyproject.toml  result.py  tools.py  zetas.py
.github/workflows/: pypi.yml  unittests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
benchmarks/: bench_massive_coeff.py  bench_massless_coeff.py  bench_me.py  bench_yadism.py  df_to_table.py
data/FO/: F2_FO_fonll_n3lo_x=0.001.csv  F2_FO_fonll_n3lo_x=0.01.csv  F2_FO_fonll_nlo_x=0.0001.csv  F2_FO_fonll_nlo_x=0.001.csv  F2_FO_fonll_nnlo_x=0.01.csv  F2_FO_our_n3lo_x=0.0001.csv  F2_FO_our_n3lo_x=0.001.csv  F2_FO_our_n3lo_x=0.01.csv  F2_FO_our_n3lo_x=0.1.csv  F2_FO_our_nlo_x=0.01.csv  F2_FO_our_nlo_x=0.1.csv  F2_FO_our_nnlo_x=0.0001.csv  F2_FO_our_nnlo_x=0.001.csv  FL_FO_fonll_nlo_x=0.0001.csv  FL_FO_fonll_nlo_x=0.1.csv  FL_FO_fonll_nnlo_x=0.001.csv  FL_FO_fonll_nnlo_x=0.01.csv  FL_FO_fonll_nnlo_x=0.1.csv  (+6 more)
disn3lo/: disn3lo.aux  disn3lo.fdb_latexmk  disn3lo.fls  disn3lo.out  disn3lo.tex  disn3lo.toc
project/: .gitignore  compute_all.sh  plot_all.sh
tests/: test_Betas.py  test_FONLLMatchingCoeffFunc.py  test_MassiveCoeffFunc.py  test_MasslessCoeffFunc.py  test_MatchingFunc.py  test_TildeCoeffFunc.py  test_TildeCoeffFunc_light.py  test_inverse_mellin.py  test_me.py  test_zetas.py
tool/: MatchingFuncN.py
(+429 files in other folders)
