[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "dis_tp"
version = "0.0.1"
authors = [
    {name = "Andrea Barontini", email = "andrea.barontini@mi.infn.it"},
    {name = "Niccolò Laurenti", email = "niccolo.laurenti@mi.infn.it"},
]
description = "Python package for producing matched DIS predictions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
testpaths = ['tests/', 'benchmarks/']
python_files = ['test_*.py', 'bench_*.py']
python_functions = ['test_*', 'benchmark_*']